[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Slingshot.png" type="Texture" id=1]
[ext_resource path="res://Parts/Slingshot.gd" type="Script" id=2]
[ext_resource path="res://assets/MollaSlingshot SX.png" type="Texture" id=3]
[ext_resource path="res://FXsounds/SlingSound.mp3" type="AudioStream" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -23.6477, -120.027 )
b = Vector2( 53.75, 104 )

[sub_resource type="Animation" id=2]
resource_name = "Sling"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Molla:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="SlingShot" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Molla" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -64.3019, -259.396, -61, -257.3, -44.1204, -239.845, -48.0714, -237.286, 105.975, 202.875, 110.615, 212.791, 111.408, 227.474, 110.615, 231.839, 108.432, 238.586, 106.646, 243.15, 104.1, 246, 94.1453, 254.46, 84.0256, 259.024, 67.4, 263, 37.5886, 262.529, 35, 260.6, -112, 159.6, -112, -230.8, -98.7, -253, -97, -253, -88.1624, -260.657, -81.7505, -262.759, -71.5547, -262.654 )

[node name="SlingArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionSling" type="CollisionShape2D" parent="SlingArea"]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sling = SubResource( 2 )

[node name="SlingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[connection signal="body_entered" from="SlingArea" to="." method="_on_SlingArea_body_entered"]
